--- a/Clay01/Main.Master
+++ b/Clay01/Main.Master
@@ -7,20 +7,15 @@
     <title>Clay Solutions</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Website Font style -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-
     <!--BOOTSTRAP CSS-->
     <link href="Assets/Styles/bootstrap.css" rel="stylesheet" />
-
     <!--jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <!--Include CSS Styles-->
     <link href="Assets/Styles/main.css" rel="stylesheet" />
 
@@ -44,6 +39,8 @@
         </div>
     </nav>
     <!--Navbar ends here-->
+
+    <!--Form with ContentPlaceHolder-->
     <form id="form1" runat="server">
         <div class="container">
             <div class="row main">
